<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="427dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </ScrollView>

        <Button
            android:id="@+id/button_getData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_getData"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_alltypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_alltypes"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_getCallLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_getCallLog"
            android:layout_weight="1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>