<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Review.ReviewActivity">


    <TextView
        android:id="@+id/rate_textview"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/review_ratingBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/rate"
        android:textSize="16sp" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/review_ratingBar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
        srb_numberOfStars="5"
        srb_rating="3"
        srb_stepSize="1"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="52dp" />

    <TextView
        android:id="@+id/review_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rate_textview"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="55dp"
        android:text="@string/write_review"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/company_spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="115dp"
        android:autofillHints="@string/write_review"
        android:inputType="textMultiLine"
        android:lines="5"
        tools:targetApi="o" />

    <CheckBox
        android:id="@+id/checkBox_review"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/company_spinner"
        android:layout_alignEnd="@+id/rate_textview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginBottom="71dp"
        android:text="@string/inplace_checkbox"
        tools:text="@string/inplace_checkbox" />

    <EditText
        android:id="@+id/review_date"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/company_spinner"
        android:layout_alignStart="@+id/rate_textview"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="date"
        tools:text="@tools:sample/date/ddmmyy" />

    <EditText
        android:id="@+id/review_time"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/company_spinner"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="time"
        tools:text="@tools:sample/date/hhmm" />

    <Spinner
        android:id="@+id/company_spinner"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="159dp"
        android:entries="@array/company_arrays"
        android:prompt="@string/company_prompt" />

    <Spinner
        android:id="@+id/freq_spinner"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="112dp"
        android:entries="@array/freq_arrays"
        android:prompt="@string/freq_prompt" />

    <Spinner
        android:id="@+id/purpose_spinner"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="66dp"
        android:entries="@array/purpose_arrays"
        android:prompt="@string/purpose_prompt" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:onClick="onSubmitButtonClicked"
        android:text="Submit" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="213dp"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="gone" />

</RelativeLayout>