<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Review.ReviewActivity">


    <TextView
        android:id="@+id/review_place_textview"
        android:layout_width="333dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:text="@string/choose_place"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="364dp"
        android:layout_height="185dp"
        android:layout_below="@+id/review_place_textview"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:checkedButton="@+id/first"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/first"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/current_location_rb" />

        <Spinner
            android:id="@+id/places_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="Choose a place"/>

        <RadioButton
            android:id="@+id/second"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/search_place_rb" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewPlace_review"
            android:layout_width="351dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:inputType="textNoSuggestions"
             />

        <ImageView
            android:id="@+id/google_powered_by_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/powered_by_google_light" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView_review"
        android:layout_width="179dp"
        android:layout_height="152dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        app:srcCompat="?android:attr/selectableItemBackgroundBorderless" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:onClick="nextButtonClicked"
        android:text="Next" />

</RelativeLayout>